# MVYShortVideoEditorAndroidPublic

./: .gitignore  Dangerfile  README.md  build.gradle  settings.gradle
app/: build.gradle  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: selector_effect_text_btn.xml
app/src/main/res/drawable/: ic_flash_off_black.xml  ic_flash_on_black.xml  ic_flash_selector.xml  ic_subtitles_black.xml  rectangle_shape.xml  rectangle_shape_blue.xml  rectangle_shape_green.xml  seek_bar_style.xml  seek_bar_thumb.xml  selector_edit_original_audio_button.xml  selector_input_picture_button.xml  selector_input_record_button.xml  selector_output_back_button.xml  selector_record_back_button.xml  selector_record_beauty_button.xml  selector_record_delete_item_button.xml  selector_record_record_button.xml  selector_record_style_button.xml  selector_record_switch_camera_button.xml  selector_speed_radio_layout.xml  (+1 more)
effecthandler/: build.gradle
effecthandler/src/main/: AndroidManifest.xml
magicshader/: CMakeLists.txt  build.gradle
magicshader/src/main/: AndroidManifest.xml
magicshader/src/main/cpp/: MagicShader-jni.cpp
magicshader/src/main/include/: mvy_magicshader.h
mediadecoder/: CMakeLists.txt  build.gradle
mediadecoder/src/main/: AndroidManifest.xml
mediadecoder/src/main/cpp/: audiodecoder-jni.cpp  ffmpegcmd-jni.cpp  videodecoder-jni.cpp
soundtouch/: CMakeLists.txt  build.gradle
soundtouch/src/main/: AndroidManifest.xml
soundtouch/src/main/cpp/: soundtouch-jni.cpp
soundtouch/src/main/java/com/myvideoyun/soundtouch/: SoundTouch.java
(+130 files in other folders)
